- Added ability in API to get top content + paging (and added implementation) - Implemented like and dislike features - Added global exception handler - Changed content DB model to hold rating rather than likes vs dislikes - Added votes DB to store each vote sent by a user
