# src/main/java/com/rbmh/contentbrowser/controllers/ContentRestController.java
@@ -15,29 +15,24 @@ import com.rbmh.contentbrowser.services.ContentService;
 public class ContentRestController
         extends ContentApiController {
 
-    private ContentService service;
+    private final ContentService service;
 
     public ContentRestController(NativeWebRequest request, final ContentService contentService) {
         super(request);
         this.service = contentService;
     }
 
-    @Override
-    public ResponseEntity<List<Content>> contentGet(Integer top) {
-        if (top == null) {
-            return ResponseEntity.ok(service.getAllContent());
-        }
-
-        return super.contentGet(top);
+    @Override public ResponseEntity<List<Content>> contentGet(final Boolean orderByVotesDesc, final Integer page, final Integer pageSize) {
+        return ResponseEntity.ok(service.getContent(orderByVotesDesc, page, pageSize));
     }
 
     @Override
-    public ResponseEntity<Content> contentIdActionsDislikePost(String id) {
-        return super.contentIdActionsDislikePost(id);
+    public ResponseEntity<Content> contentIdActionsDislikePost(final String id) {
+        return ResponseEntity.ok(service.voteContent(id, false));
     }
 
     @Override
-    public ResponseEntity<Content> contentIdActionsLikePost(String id) {
-        return super.contentIdActionsLikePost(id);
+    public ResponseEntity<Content> contentIdActionsLikePost(final String id) {
+        return ResponseEntity.ok(service.voteContent(id, true));
     }
 }
